wasm-works/envoy-config.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
bootstrap_extensions:
  - name: envoy.bootstrap.wasm
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
      singleton: true
      config:
        name: "wasm-master"
        root_id: "wasm-master-root"
        configuration:
          "@type": "type.googleapis.com/google.protobuf.StringValue"
          value: |
            {}
        vm_config:
          runtime: "envoy.wasm.runtime.v8"
          vm_id: "wasm-master-vm"
          code:
            local:
              filename: "./envoy-wasm/wasm_singleton.wasm"
          configuration: {}
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config: 
                name: all
                virtual_hosts:
                  - name: allbackend_cluster
                    domains: 
                      - '*'
                    routes:
                      - match: { prefix: "/"}
                        route:
                          cluster: allbackend_cluster
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        name: "wasm-worker"
                        root_id: "wasm-worker-root"
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {}
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          vm_id: "wasm-worker-vm"
                          code:
                            local:
                              filename: "./envoy-wasm/wasm_filter01.wasm"
                          configuration: {}
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: allbackend_cluster
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: allbackend_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 192.168.1.117
                    port_value: 1111
    - name: guarding_grpc
      connect_timeout: 1s
      type: strict_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: guarding_grpc
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 192.168.1.117
                    port_value: 50051
